--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -222,6 +222,7 @@
 
   --z-sticky: 10;
   --z-header: 100;
+  --z-table-header: 150;
   --z-dropdown: 1000;
   --z-modal: 10000;
 
